--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 				<section class="description">
 					<div class="container">
 						<div class="description__text">
-							Приглашаем тебя на нашу свадьбу, которая состоится 28 августа в Барановичах и бла бла бла бла бла
-							бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла блабла бла
-							бла блабла блабла ывыларывлоралды рыфл уо паодывп аоыпф пфоыпаоыпва фоып пфыпва фоыпа ыфо подыфпа
-							ыоффова пфыод Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate reiciendis,
-							aliquam aspernatur alias quasi mollitia iste quam sapiente non iusto. Distinctio ipsa accusamus
-							nobis minima porro doloribus, quisquam officia reprehenderit.
+							<p>28 августа мы будем праздновать главное событие нашей сознательной жизни - мы станем семьёй!
+								Приглашаем тебя отметить это событие вместе с нами. Нужную информацию ты сможешь найти на этом
+								сайте.</p>
+							<p>И ещё :) Не забудь заполнить <a href="">анкету</a>, чтобы мы
+								смогли сделать наш праздник
+								комфортным для каждого :)</p>
 						</div>
 					</div>
 				</section>
