--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<section class="description">
 					<div class="container">
 						<div class="description__text">
-							<p>28 августа мы будем праздновать главное событие нашей сознательной жизни - мы станем семьёй!
+							<p>28 августа мы будем праздновать главное событие нашей жизни - мы станем семьёй!
 								Приглашаем тебя отметить это событие вместе с нами. Нужную информацию ты сможешь найти на этом
 								сайте.</p>
 							<p>И ещё :) Не забудь заполнить <a href="">анкету</a>, чтобы мы
