--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 	<title>Ales & Wika</title>
 </head>
 
@@ -48,7 +49,46 @@
 								сайте.</p>
 							<p>И ещё :) Не забудь заполнить <a href="">анкету</a>, чтобы мы
 								смогли сделать наш праздник
-								комфортным для каждого :)</p>
+								комфортным для каждого!</p>
+						</div>
+					</div>
+				</section>
+				<section class="history">
+					<div class="container">
+						<div class="history__head head">
+							<div class="head__title">Наша история</div>
+							<div class="head__image">
+								<img src="img/ring.png" alt="" class="head__img">
+							</div>
+							<div class="head__subtitle">Моменты, которые сблизили нас</div>
+						</div>
+						<div class="history__body swiper-container">
+							<div class="history__slider swiper-wrapper">
+								<div class="history__slide swiper-slide">
+									<div class="history__image">
+										<img src="img/history/02_1.JPG" alt="">
+									</div>
+								</div>
+								<div class="history__slide swiper-slide">
+									<div class="history__image">
+										<img src="img/history/01_1.JPG" alt="">
+									</div>
+								</div>
+								<div class="history__slide swiper-slide">
+									<div class="history__image">
+										<img src="img/history/03_1.JPG" alt="">
+									</div>
+								</div>
+								<div class="history__slide swiper-slide">
+									<div class="history__image">
+										<img src="img/history/04_1.JPG" alt="">
+									</div>
+								</div>
+							</div>
+							<div class="history__prev">
+							</div>
+							<div class="history__next">
+							</div>
 						</div>
 					</div>
 				</section>
@@ -62,9 +102,10 @@
 	</div>
 </footer>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="js/main.js"></script>
-	<script src="#source/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 
 </html>
