--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
 							<div class="history__slider swiper-wrapper">
 								<div class="history__slide swiper-slide">
 									<div class="history__image">
-										<img src="img/history/02_1.JPG" alt="">
+										<img src="img/history/02_1.jpg" alt="">
 									</div>
 								</div>
 								<div class="history__slide swiper-slide">
 									<div class="history__image">
-										<img src="img/history/01_1.JPG" alt="">
+										<img src="img/history/01_1.jpg" alt="">
 									</div>
 								</div>
 								<div class="history__slide swiper-slide">
 									<div class="history__image">
-										<img src="img/history/03_1.JPG" alt="">
+										<img src="img/history/03_1.jpg" alt="">
 									</div>
 								</div>
 								<div class="history__slide swiper-slide">
 									<div class="history__image">
-										<img src="img/history/04_1.JPG" alt="">
+										<img src="img/history/04_1.jpg" alt="">
 									</div>
 								</div>
 							</div>
