--- a/index.html
+++ b/index.html
@@ -53,90 +53,113 @@
 						</div>
 					</div>
 				</section>
-				<section class="history">
-					<div class="container">
-						<div class="history__head head">
-							<div class="head__title">Наша история</div>
-							<div class="head__image">
-								<img src="img/ring.png" alt="" class="head__img">
+				<div class="background">
+					<section class="history">
+						<div class="container">
+							<div class="history__head head">
+								<div class="head__title">Наша история</div>
+								<div class="head__image">
+									<img src="img/ring.png" alt="" class="head__img">
+								</div>
+								<div class="head__subtitle">Моменты, которые сблизили нас</div>
+								<span></span>
 							</div>
-							<div class="head__subtitle">Моменты, которые сблизили нас</div>
-							<span></span>
+							<div class="history__body swiper-container">
+								<div class="history__slider swiper-wrapper">
+									<div class="history__slide swiper-slide">
+										<div class="history__image">
+											<img src="img/history/02_1.jpg" alt="">
+										</div>
+									</div>
+									<div class="history__slide swiper-slide">
+										<div class="history__image">
+											<img src="img/history/01_1.jpg" alt="">
+										</div>
+									</div>
+									<div class="history__slide swiper-slide">
+										<div class="history__image">
+											<img src="img/history/03_1.jpg" alt="">
+										</div>
+									</div>
+									<div class="history__slide swiper-slide">
+										<div class="history__image">
+											<img src="img/history/04_1.jpg" alt="">
+										</div>
+									</div>
+								</div>
+								<div class="history__prev">
+								</div>
+								<div class="history__next">
+								</div>
+							</div>
 						</div>
-						<div class="history__body swiper-container">
-							<div class="history__slider swiper-wrapper">
-								<div class="history__slide swiper-slide">
-									<div class="history__image">
-										<img src="img/history/02_1.jpg" alt="">
+					</section>
+					<section class="events">
+						<div class="container">
+							<div class="events__background">
+								<div class="events__head head">
+									<div class="head__title">Мероприятия</div>
+									<div class="head__image">
+										<img src="img/ring.png" alt="" class="head__img">
 									</div>
+									<div class="head__subtitle">Наш праздник будет длиться 2 дня</div>
 								</div>
-								<div class="history__slide swiper-slide">
-									<div class="history__image">
-										<img src="img/history/01_1.jpg" alt="">
-									</div>
-								</div>
-								<div class="history__slide swiper-slide">
-									<div class="history__image">
-										<img src="img/history/03_1.jpg" alt="">
-									</div>
-								</div>
-								<div class="history__slide swiper-slide">
-									<div class="history__image">
-										<img src="img/history/04_1.jpg" alt="">
-									</div>
-								</div>
-							</div>
-							<div class="history__prev">
-							</div>
-							<div class="history__next">
-							</div>
-						</div>
-					</div>
-				</section>
-				<section class="events">
-					<div class="container">
-						<div class="events__head head">
-							<div class="head__title">Мероприятия</div>
-							<div class="head__image">
-								<img src="img/ring.png" alt="" class="head__img">
-							</div>
-							<div class="head__subtitle">Наш праздник будет длиться 2 дня</div>
-						</div>
-						<div class="events__body">
-							<div class="events__day day">
-								<div class="day__title">
-									Первый день (28 августа)
-								</div>
-								<div class="day__wrap">
-									<div class="day__wrapper">
-										<div class="day__column day__column_img">
-											<div class="day__image">
-												<img src="img/events/church.png" alt="">
+								<div class="events__body">
+									<div class="events__day day">
+										<div class="day__title">
+											Первый день (28 августа)
+										</div>
+										<div class="day__wrap">
+											<div class="day__wrapper">
+												<div class="day__column day__column_img">
+													<div class="day__image">
+														<img src="img/events/church.png" alt="">
+													</div>
+												</div>
+												<div class="day__column">
+													<div class="day__label">Венчание</div>
+													<div class="day__time">Время: 12.00</div>
+													<div class="day__adress">Адрес: г.Барановичи, ул. Куйбышева 36</div>
+												</div>
+											</div>
+											<div class="day__wrapper day__wrapper_2">
+												<div class="day__column">
+													<div class="day__label">Отдых на усадьбе</div>
+													<div class="day__time">Время: 14.00 - 23.00</div>
+													<div class="day__adress">Адрес: г.Барановичи, ул. Куйбышева 36</div>
+												</div>
+												<div class="day__column day__column_img">
+													<div class="day__image">
+														<img src="img/events/party.png" alt="">
+													</div>
+												</div>
 											</div>
 										</div>
-										<div class="day__column">
-											<div class="day__label">Венчание</div>
-											<div class="day__time">Время: 12.00</div>
-											<div class="day__adress">Адрес: г.Барановичи, ул. Куйбышева 36</div>
-										</div>
 									</div>
-									<div class="day__wrapper day__wrapper_2">
-										<div class="day__column">
-											<div class="day__label">Отдых на усадьбе</div>
-											<div class="day__time">Время: 14.00 - 23.00</div>
-											<div class="day__adress">Адрес: г.Барановичи, ул. Куйбышева 36</div>
+									<div class="events__day day">
+										<div class="day__title">
+											Второй день (29 августа)
 										</div>
-										<div class="day__column day__column_img">
-											<div class="day__image">
-												<img src="img/events/party.png" alt="">
+										<div class="day__wrap">
+											<div class="day__wrapper">
+												<div class="day__column day__column_img">
+													<div class="day__image">
+														<img src="img/events/village.png" alt="">
+													</div>
+												</div>
+												<div class="day__column">
+													<div class="day__label">Отдых в деревне</div>
+													<div class="day__time">Время: с 12.00</div>
+													<div class="day__adress">Адрес: г.Барановичи, ул. Куйбышева 36</div>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</section>
+					</section>
+				</div>
 			</section>
 		</div>
 		<footer class="footer">
