--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 											<div class="day__wrapper">
 												<div class="day__column day__column_img">
 													<div class="day__image">
-														<img src="img/events/church.png" alt="">
+														<img src="img/events/church_2.png" alt="">
 													</div>
 												</div>
 												<div class="day__column">
@@ -124,13 +124,13 @@
 											</div>
 											<div class="day__wrapper day__wrapper_2">
 												<div class="day__column">
-													<div class="day__label">Отдых на усадьбе</div>
+													<div class="day__label">Отдых в усадьбе</div>
 													<div class="day__time">Время: 14.00 - 23.00</div>
 													<div class="day__adress">Адрес: г.Барановичи, ул. Куйбышева 36</div>
 												</div>
 												<div class="day__column day__column_img">
 													<div class="day__image">
-														<img src="img/events/party.png" alt="">
+														<img src="img/events/party_2.png" alt="">
 													</div>
 												</div>
 											</div>
@@ -144,7 +144,7 @@
 											<div class="day__wrapper">
 												<div class="day__column day__column_img">
 													<div class="day__image">
-														<img src="img/events/village.png" alt="">
+														<img src="img/events/village_2.png" alt="">
 													</div>
 												</div>
 												<div class="day__column">
