--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 								Приглашаем на свадьбу!
 							</h1>
 							<h2 class="main-info__subtitle">
-								28 августа | Барановичи
+								28 августа
+							</h2>
+							<h2 class="main-info__subtitle main-info__subtitle_town">
+								Барановичи | Усадьба Чижи
 							</h2>
 							<span></span>
 						</div>
@@ -117,21 +120,71 @@
 													</div>
 												</div>
 												<div class="day__column">
-													<div class="day__label">Венчание</div>
-													<div class="day__time">Время: 12.00</div>
+													<div class="day__label">
+														<p>Венчание</p>
+														<span></span>
+													</div>
+													<div class="day__time">Время: 13.00</div>
 													<div class="day__adress">Адрес: г.Барановичи, ул. Куйбышева 36</div>
 												</div>
 											</div>
 											<div class="day__wrapper day__wrapper_2">
 												<div class="day__column">
-													<div class="day__label">Отдых в усадьбе</div>
-													<div class="day__time">Время: 14.00 - 23.00</div>
-													<div class="day__adress">Адрес: г.Барановичи, ул. Куйбышева 36</div>
+													<div class="day__label">
+														<p>Отправление в усадьбу</p> <span></span>
+													</div>
+													<div class="day__time">Время: 15:00</div>
+													<div class="day__adress">Отправление: ул.Куйбышева 36</div>
+													<div class="day__adress">Адрес усадьбы: д. Дарево, ул. Лесная 1</div>
+													<div class="day__text">Специально для тебя мы заказали автобус, который доставит
+														всех в усадьбу, а после праздника вернёт в город прямо к подъезду:)</div>
 												</div>
 												<div class="day__column day__column_img">
 													<div class="day__image">
 														<img src="img/events/party_2.png" alt="">
 													</div>
+												</div>
+											</div>
+											<div class="day__wrapper">
+												<div class="day__column day__column_img">
+													<div class="day__image">
+														<img src="img/events/party_2.png" alt="">
+													</div>
+												</div>
+												<div class="day__column">
+													<div class="day__label">
+														<p>Отдых на усадьбе</p> <span></span>
+													</div>
+													<div class="day__time">Время: 16.00 - 23.00</div>
+													<div class="day__adress">Адрес: д. Дарево, ул. Лесная 1</div>
+												</div>
+											</div>
+											<div class="day__wrapper day__wrapper_2">
+												<div class="day__column">
+													<div class="day__label">
+														<p>Финал</p> <span></span>
+													</div>
+													<div class="day__time">Время: 22:30</div>
+													<div class="day__text">Свадебный торт</div>
+												</div>
+												<div class="day__column day__column_img">
+													<div class="day__image">
+														<img src="img/events/party_2.png" alt="">
+													</div>
+												</div>
+											</div>
+											<div class="day__wrapper">
+												<div class="day__column day__column_img">
+													<div class="day__image">
+														<img src="img/events/party_2.png" alt="">
+													</div>
+												</div>
+												<div class="day__column">
+													<div class="day__label">
+														<p>Конец</p> <span></span>
+													</div>
+													<div class="day__time">Время:23.00</div>
+													<div class="day__text">Наш автобус довезет тебя до подъезда</div>
 												</div>
 											</div>
 										</div>
@@ -148,7 +201,9 @@
 													</div>
 												</div>
 												<div class="day__column">
-													<div class="day__label">Отдых в деревне</div>
+													<div class="day__label">
+														<p>Отдых в деревне</p> <span></span>
+													</div>
 													<div class="day__time">Время: с 12.00</div>
 													<div class="day__adress">Адрес: г.Барановичи, ул. Куйбышева 36</div>
 												</div>
